fix styling bugs on mobile view

--- a/client/src/Pages/Dashboard/Rooms.scss
+++ b/client/src/Pages/Dashboard/Rooms.scss
@@ -13,21 +13,34 @@
   &--close{
     display:none;
 
-  };
+  }
   &__box{
-  bottom: 50vh;
   position: absolute;
   z-index: 1;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 40rem;
-  height: 20rem;
   background-color: white;
   outline: none;
   border-radius: 0.25rem;
-}
+  width: 100vw;
+  height: 100vh;
+  @include tablet{
+  width: 40rem;
+  height: 20rem;
+  bottom: 50vh;
 
+  }
+ }
+  &__back-arrow{
+    position: fixed;
+    margin: 1rem;
+    top:0;
+    left:0;
+    @include tablet{
+      display: none;
+    }
+  }
 }
 
 .room{
